--- a/www/index.html
+++ b/www/index.html
@@ -45,10 +45,25 @@
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
-    <ion-nav-bar class="bar-stable">
+<!--     <ion-nav-bar class="bar-stable">
       <ion-nav-back-button>
       </ion-nav-back-button>
-    </ion-nav-bar>
+    </ion-nav-bar> -->
+        <ion-nav-bar >
+        <!-- <ion-nav-back-button></ion-nav-back-button> -->
+        <ion-nav-buttons side="left">
+            <button id="saveButton" class="button button-clear">Back</button>
+        </ion-nav-buttons>
+  <!--        <ion-nav-buttons side="left">
+            <button id="saveButton" class="button icon icon-home">Back</button>
+        </ion-nav-buttons> -->
+        <ion-nav-buttons side="right">
+            <button id="saveButton" class="button button-clear">Skip</button>
+        </ion-nav-buttons><ion-nav-buttons side="right">
+            <button id="saveButton" class="button button-clear">Skip</button>
+        </ion-nav-buttons>
+
+      </ion-nav-bar>
     <!--
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
