--- a/platforms/ios/www/js/home/home.template.html
+++ b/platforms/ios/www/js/home/home.template.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Stories">
+<ion-view view-title="Home">
   <ion-content>
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" ui-sref="storyCreate" style="background-color: green;" type="item-text-wrap" >
