top navbar functional, filterable by state

--- a/www/js/story/story.template.html
+++ b/www/js/story/story.template.html
@@ -14,8 +14,12 @@
     <ion-content>
       <div class="list list-inset">
         <label class="item item-input">
-          <span class="input-label">Imagine Panels Here</span>
+          <!-- <span class="input-label"> -->
+          <!-- placeholder comic strip, will be replaced by square thumbnails -->
+            <img src="assets/sample_comic.jpg" height="100%" width="100%">
+          <!-- </span> -->
         </label>
+        <div align="center"><p>This is a sample comic strip</p></div>
       </div>
       <div class="padding">
         <button ui-sref="home" class="button button-block button-positive">
