updates from Wed11

--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,9 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
+    <!-- FIREBASE -->
+    <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
+
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -28,6 +31,7 @@
     <!-- Factories -->
     <script src="js/user/user.factory.js"></script>
     <script src="js/story/story.factory.js"></script>
+    <script src="js/camera/camera.factory.js"></script>
     
     <!-- Controllers -->
     <script src="js/controllers.js"></script>
@@ -42,6 +46,7 @@
     <script src="js/services.js"></script>
   </head>
   <body ng-app="starter">
+    HELLO WORLD
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
