--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
     <script src="js/user/user.factory.js"></script>
     <script src="js/story/story.factory.js"></script>
     <script src="js/camera/camera.factory.js"></script>
+    <script src="js/camera/grafi.factory.js"></script>
     
     <!-- Controllers -->
     <script src="js/controllers.js"></script>
