--- a/www/js/home/home.template.html
+++ b/www/js/home/home.template.html
@@ -13,6 +13,11 @@
         <p>{{chat.lastText}}</p>
         <i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
+      <ion-item class="item-remove-animate item-avatar item-icon-right" type="item-text-wrap" ui-sref="testState">
+        <img ng-src="{{chat.face}}">
+        <h2>TEST STATE (DELETE)</h2>
+        <i class="icon ion-chevron-right icon-accessory"></i>
+      </ion-item>
     </ion-list>
   </ion-content>
 </ion-view>
