--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -22,8 +22,8 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
-
     <script src="js/fsa/fsa-pre-built.js"></script>
+
 
     <!-- Factories -->
     <script src="js/user/user.factory.js"></script>
@@ -31,13 +31,16 @@
     
     <!-- Controllers -->
     <script src="js/controllers.js"></script>
-<script src="js/home/home.controller.js"></script>
+    <script src="js/home/home.controller.js"></script>
     <script src="js/signup/signup.js"></script>
     <script src="js/login/login.js"></script>
     <script src="js/story/story.create.controller.js"></script>
     <script src="js/story/story.controller.js"></script>
     <script src="js/camera/camera.controller.js"></script>
+    <script src="js/testState/testState.controller.js"></script>
 
+    <!-- Directives -->
+    <script src="js/navbar/navbar.addons/navbar.addons.directive.js"></script>
 
     <script src="js/services.js"></script>
   </head>
@@ -49,11 +52,13 @@
       <ion-nav-back-button>
       </ion-nav-back-button>
     </ion-nav-bar>
+
     <!--
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
       have templates inline in this html file if you'd like).
     -->
-    <ion-nav-view></ion-nav-view>
+    <ion-nav-view>
+    </ion-nav-view>
   </body>
 </html>
