--- a/platforms/ios/www/js/login/login.html
+++ b/platforms/ios/www/js/login/login.html
@@ -3,8 +3,7 @@
     <ion-content>
       <div class="list list-inset">
         <label class="item item-input">
-        hello world
-          <span class="input-label">Email hello</span>
+          <span class="input-label">Email</span>
           <input type="email" name="email" ng-model="login.email" class="form-control" id="email">
         </label>
         <label class="item item-input">
