realtime download of photos and refactoring of image controller and factory

--- a/platforms/ios/www/js/camera/camera.template.html
+++ b/platforms/ios/www/js/camera/camera.template.html
@@ -4,7 +4,8 @@
 	    <button class="button" ng-click="takePicture()">Take Picture</button>
 	    <button class="button" ng-click="openPhotoLibrary()">Select Photo From Library</button>
 	    <button class="button" ng-click="getImageURI()">Get Image URI</button>
-	    <!-- <img src='/Users/Debanshi/comic-book/server/app/assets/5733a34ec85339ef0b76ea56'> -->
-<!-- 	    <canvas id='one'></canvas> -->
+	    <button class="button" ng-click="saveImage()">Save Image</button>
+	    <button class="button" ng-click="filterImage()">Filter Image</button>
+	    <canvas id='newCanvas' width='375' height='375'></canvas>
 	</ion-content>
 </ion-view>
