--- a/www/js/story/story.template.html
+++ b/www/js/story/story.template.html
@@ -1,32 +1,14 @@
 <ion-view title="{{story.title}}">
   <ion-content>
-    <div class="padding">
-    <!--  <button class="button button-block" ui-sref('camera({storyId: story._id})')> -->
-    <button class="button button-block" ng-click='goToCamera()'> 
+    <ion-scroll has-bouncing='false'>
+      <div class="padding">
+      <div id='here'>
+      </div>
+      <button class="button button-block" ui-sref('camera({storyId: story._id})')>
+      <button class="button button-block" ng-click='goToCamera()'> 
        Add New Square
-     </button>
-    </div>
+      </button>
+      </div>
+    </ion-scroll>
   </ion-content>
 </ion-view>
-
-<form ua-storyCreate>
-  <ion-view title="{{story.title}}">
-    <ion-content>
-      <div class="list list-inset">
-        <label class="item item-input">
-          <!-- <span class="input-label"> -->
-          <!-- placeholder comic strip, will be replaced by square thumbnails -->
-            <img src="assets/sample_comic.jpg" height="100%" width="100%">
-          <!-- </span> -->
-        </label>
-        <div align="center"><p>This is a sample comic strip</p></div>
-      </div>
-      <div class="padding">
-        <button ui-sref="home" class="button button-block button-positive">
-          <span ng-show="!loading">My Stories</span>
-          <i ng-show="loading" class="ion-loading-b"></i>
-        </button>
-      </div>
-    </ion-content>
-  </ion-view>
-</form>
