updated with refactored camera ctrl

--- a/www/js/camera/camera.template.html
+++ b/www/js/camera/camera.template.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Account">
 	<ion-content>
-		<canvas id='myCanvas' width='375' height='375'></canvas>
+		<canvas id='imageCanvas' width='375' height='375'></canvas>
 	    <button class="button" ng-click="takePicture()">Take Picture</button>
 	    <button class="button" ng-click="openPhotoLibrary()">Select Photo From Library</button>
 	    <button class="button" ng-click="getImageURI()">Get Image URI</button>
