collab in good shape

--- a/www/js/camera/camera.template.html
+++ b/www/js/camera/camera.template.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Account">
+<ion-view view-title="Take Pic">
 	<ion-content>
 		<canvas id='myCanvas' width='375' height='375'></canvas>
 	    <button class="button" ng-click="takePicture()">Take Picture</button>
