--- a/www/js/story/story.template.html
+++ b/www/js/story/story.template.html
@@ -22,8 +22,8 @@
         <div align="center"><p>This is a sample comic strip</p></div>
       </div>
       <div class="padding">
-        <button ui-sref="home" class="button button-block button-positive">
-          <span ng-show="!loading">My Stories</span>
+        <button ui-sref="camera({storyId: story._id})" class="button button-block button-positive">
+          <span>Add Square</span>
           <i ng-show="loading" class="ion-loading-b"></i>
         </button>
       </div>
