--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,6 @@
     <script src="js/app.js"></script>
     <script src="js/fsa/fsa-pre-built.js"></script>
 
-
     <!-- Factories -->
     <script src="js/user/user.factory.js"></script>
     <script src="js/story/story.factory.js"></script>
@@ -51,6 +50,9 @@
     <script src="js/camera/camera.controller.js"></script>
     <script src="js/testState/testState.controller.js"></script>
 
+    <!-- Filters -->
+    <script src="js/filters/filters.js"></script>
+
     <script src="js/services.js"></script>
   </head>
 
@@ -59,7 +61,7 @@
       The nav bar that will be updated as we navigate between views.
     -->
 
-    <ion-nav-bar class = "bar-stable">
+    <ion-nav-bar class="bar-stable">
         <ion-nav-back-button></ion-nav-back-button>
 
    <!--      <ion-nav-buttons hide-back-button="{{toState == 'home'}}" side="left">
@@ -67,24 +69,24 @@
         </ion-nav-buttons> -->
 
         <ion-nav-buttons side="left">
-            <button id="saveButton" class="button button-clear" ng-if="'home' | isState">Profile</button>
+            <button id="saveButton" class="button button-clear" ng-if="&apos;home&apos; | isState">Profile</button>
         </ion-nav-buttons>    
 
     <!--     <ion-nav-buttons side="right">
             <button id="saveButton" class="button button-clear">Skip</button>
         </ion-nav-buttons> -->
         <ion-nav-buttons side="right">
-            <button class="button button-dark button-clear" ng-if="'home' | isState">Settings</button>
+            <button class="button button-dark button-clear" ng-if="&apos;home&apos; | isState">Settings</button>
         </ion-nav-buttons>
 
     </ion-nav-bar>
 
-<<<<<<< HEAD
+&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
 =======
 
       <!-- <navbar-home></navbar-home> -->
 
->>>>>>> master
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; master
     <!--
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
