new buttons in top navbar

--- a/www/js/camera/camera.template.html
+++ b/www/js/camera/camera.template.html
@@ -18,7 +18,7 @@
 
 
 	</ion-content>
-	</ion-footer-bar>
+	<!-- </ion-footer-bar> -->
     	<div>{{filters}}</div>
   		<div>
 			<navbar-addon 
@@ -34,5 +34,5 @@
 			filter="filter"
 			></navbar-addon>
 		</div>
-	</ion-footer-bar>
+	<!-- </ion-footer-bar> -->
 </ion-view>
