--- a/www/index.html
+++ b/www/index.html
@@ -63,41 +63,20 @@
   </head>
 
   <body ng-app="starter">
-    <!--
-      The nav bar that will be updated as we navigate between views.
-    -->
-
     <ion-nav-bar class="bar-stable">
-        <ion-nav-back-button></ion-nav-back-button>
-
-   <!--      <ion-nav-buttons hide-back-button="{{toState == 'home'}}" side="left">
-            <button id="saveButton" class="button button-clear">Back</button>
-        </ion-nav-buttons> -->
-
-        <ion-nav-buttons side="left">
-            <button id="saveButton" class="button button-clear" ng-if="&apos;home&apos; | isState">Profile</button>
-        </ion-nav-buttons>    
-
-    <!--     <ion-nav-buttons side="right">
-            <button id="saveButton" class="button button-clear">Skip</button>
-        </ion-nav-buttons> -->
-        <ion-nav-buttons side="right">
-            <button class="button button-dark button-clear" ng-if="&apos;home&apos; | isState">Settings</button>
-        </ion-nav-buttons>
-
-    </ion-nav-bar>
-
-&lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
-=======
-
-      <!-- <navbar-home></navbar-home> -->
-
-&gt;&gt;&gt;&gt;&gt;&gt;&gt; master
-    <!--
-      The views will be rendered in the <ion-nav-view> directive below
-      Templates are in the /templates folder (but you could also
-      have templates inline in this html file if you'd like).
-    -->
+      <ion-nav-buttons side="left"><button class="button button-icon ion-navicon"></button></ion-nav-buttons>
+      <ion-nav-back-button ng-if=" !'home' | isState"></ion-nav-back-button>
+      <ion-nav-buttons side="left">
+        <button ng-if=" 'home' | isState" menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+        <!-- <button class="button button-icon ion-search"></button> -->
+        <button ng-if=" !'home' | isState" class="button icon-left ion-home"></button>
+      </ion-nav-buttons>
+      <ion-nav-buttons side="right">
+        <!-- <button class="button button-icon ion-ios-email"></button> -->
+        <button class="button button-icon ion-ios-people"></button>
+        <button ng-if=" 'home' | isState" class="button button-icon ion-gear-a"></button>
+        <button ng-if=" 'camera' | isState" class="button button-icon ion-grid"></button>
+      </ion-nav-buttons>
     <ion-nav-view>
     </ion-nav-view>
   </body>
