image updates including filters in navbar

--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,7 @@
     <script src="js/story/story.factory.js"></script>
     <script src="js/camera/camera.factory.js"></script>
     <script src="js/camera/grafi.factory.js"></script>
+    <script src="js/camera/filter.factory.js"></script>
 
 
     <!-- Directives -->
