--- a/www/js/camera/camera.template.html
+++ b/www/js/camera/camera.template.html
@@ -1,17 +1,18 @@
 <ion-view view-title="Edit Image">
 	<ion-content scroll="false">
-	
 		<canvas id='imageCanvas' width='375' height='375' data-caman-hidpi-disabled="true"></canvas>
+		<button class="button" ng-click="addStickersToCanvas
+		()">Add stickers to canvas</button>
 
 
-		<img ng-src={{sticker.source}} id="sticker{{sticker.id}}" ng-repeat="sticker in stickersArray" hm-panmove='onHammer' ng-click="test()" style="position:absolute; top:'0px'; left:'0px'">{{ sticker }}</img>
-<!-- 	    <button class="button" ng-click="takePicture()">Take Picture</button>
-	    <button class="button" ng-click="openPhotoLibrary()">Select Photo From Library</button> -->
-	    
-	    <canvas id='greyImage'width='125' height='125' data-caman-hidpi-disabled="true" ng-click="applyFilter('grey', 'imageCanvas')"></canvas>
-	    <canvas id='posterImage' width='125' height='125' data-caman-hidpi-disabled="true" ng-click="applyFilter('poster', 'imageCanvas')"></canvas>
-	    <canvas id='brownImage' width='125' height='125' data-caman-hidpi-disabled="true" ng-click="applyFilter('brown', 'imageCanvas')"></canvas>
-	    <canvas id='blackImage' width='125' height='125' data-caman-hidpi-disabled="true" ng-click="applyFilter('black', 'imageCanvas')"></canvas>
+		<img ng-src={{sticker.source}} 
+			id="sticker{{sticker.id}}" 
+			ng-repeat="sticker in stickersArray" 
+			hm-panmove='onHammer' 
+			ng-click="test()" 
+			ng-dbclick = 'remove()' 
+			style="position:absolute !important; top:0px; left:0px">{{ sticker }}
+		</img>
 
 	  
 		<button class="button" ng-click="saveImage()">Save Image</button>
@@ -24,7 +25,8 @@
 			<navbar-addon 
 			id="navbarAddon" 
 			test="testFunc()" 
-			addons="allAddons"
+			addons="allAddons",
+			url="url",
 			takepicture="takePicture()"
 			openphotolibrary="openPhotoLibrary()"
 			onhammer="onHammer()"
@@ -32,6 +34,8 @@
 			bubble="bubble"
 			border="border"
 			filter="filter"
+			filtersarr='filtersarr'
+			applyfilter='applyfilter'
 			></navbar-addon>
 		</div>
 	</ion-footer-bar>
