--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,12 @@
     <script src="https://code.jquery.com/jquery-2.2.3.min.js" integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/camanjs/4.1.2/caman.full.min.js"></script>
     <script type="text/javascript" src="lib/caman/dist/caman.full.min.js"></script>
+    
+    <!-- html2canvas scripts -->
+    <script src="js/components/jquery.min.js"></script>
+    <script src="js/components/angular-route.min.js"></script>
+    <script src="js/components/angular-sanitize.min.js"></script>
+    <script src="js/components/html2canvas.js"></script>
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
