--- a/www/js/camera/camera.template.html
+++ b/www/js/camera/camera.template.html
@@ -1,6 +1,13 @@
 <ion-view view-title="Edit Image">
-	<ion-content scroll="false">
-		<canvas id='imageCanvas' width='375' height='375' data-caman-hidpi-disabled="true"></canvas>
+	<ion-content scroll="true">
+<!-- 	<ion-content scroll="false">
+ -->
+<!-- PLACEHOLDER BUBBLE -->
+	  	<textarea rows="4" cols="50" id='new' style="border:solid black 3px;max-width:120px"></textarea>
+		<h1 ng-click="previewImage()" id="one">PREVIEW IMG</h1>
+<!-- END OF PLACEHOLDER FOR BUBBLE -->
+ 
+ <canvas id='imageCanvas' width='375' height='375' data-caman-hidpi-disabled="true"></canvas>
 		<button class="button" ng-click="addStickersToCanvas
 		()">Add stickers to canvas</button>
 
@@ -14,9 +21,9 @@
 			style="position:absolute !important; top:0px; left:0px">{{ sticker }}
 		</img>
 
-	  
-		<button class="button" ng-click="saveImage()">Save Image</button>
 
+		
+		<button class="button" ng-click="saveImage()">Save Image</button>
 
 	</ion-content>
 	</ion-footer-bar>
