--- a/www/index.html
+++ b/www/index.html
@@ -74,12 +74,13 @@
   </head>
 
   <body ng-app="starter">
+
+  <!-- Top navbar that changes based on states -->
     <ion-nav-bar class="bar-stable">
-     <!--  <ion-nav-buttons side="left"><button class="button button-icon ion-navicon"></button></ion-nav-buttons> -->
-      <ion-nav-back-button></ion-nav-back-button>
+      <ion-nav-back-button hide-back-button="{{'home' | isState}}"></ion-nav-back-button>
       <ion-nav-buttons side="left">
+        <button ng-hide="'home' | isState" ui-sref="home" class="button icon-left ion-home"></button>
       <!--   <button ng-if=" 'home' | isState" menu-toggle="left" class="button button-icon icon ion-navicon"></button> -->
-        <button ng-if=" 'home' | !isState" class="button icon-left ion-home"></button>
         <!-- <button ng-if=" 'camera' | isState" class="button button-icon ion-grid"></button> -->
       </ion-nav-buttons>
       <ion-nav-buttons side="right">
@@ -87,6 +88,8 @@
         <button ng-if=" 'home' | isState" class="button button-icon ion-person-add"></button>
         <button ng-if=" 'home' | isState" class="button button-icon ion-gear-a"></button>
       </ion-nav-buttons>
+
+
     <ion-nav-view>
     </ion-nav-view>
   </body>
