--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
@@ -65,6 +64,8 @@
     <script src="js/story/story.create.controller.js"></script>
     <script src="js/story/story.controller.js"></script>
     <script src="js/camera/camera.controller.js"></script>
+    <script src="js/settings/settings.controller.js"></script>
+    <script src="js/top-navbar/top-navbar.controller.js"></script>
 
     <!-- Filters -->
     <script src="js/filters/filters.js"></script>
@@ -76,8 +77,10 @@
   <body ng-app="starter">
 
   <!-- Top navbar that changes based on states -->
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button hide-back-button="{{'home' | isState}}"></ion-nav-back-button>
+    <ion-nav-bar class="bar-stable" ng-controller="Topnavbar">
+        <div ng-show="checkState()">
+      <ion-nav-back-button></ion-nav-back-button>
+        </div>
       <ion-nav-buttons side="left">
         <button ng-hide="'home' | isState" ui-sref="home" class="button icon-left ion-home"></button>
       <!--   <button ng-if=" 'home' | isState" menu-toggle="left" class="button button-icon icon ion-navicon"></button> -->
@@ -86,7 +89,7 @@
       <ion-nav-buttons side="right">
         <!-- <button class="button button-icon ion-ios-email"></button> -->
         <button ng-if=" 'home' | isState" class="button button-icon ion-person-add"></button>
-        <button ng-if=" 'home' | isState" class="button button-icon ion-gear-a"></button>
+        <button ui-sref="settings" ng-if=" 'home' | isState" class="button button-icon ion-gear-a"></button>
       </ion-nav-buttons>
 
 
