--- a/platforms/ios/www/js/camera/camera.template.html
+++ b/platforms/ios/www/js/camera/camera.template.html
@@ -1,13 +1,20 @@
-<<<<<<< HEAD
-<ion-view view-title="Camera" id="container">
-<!-- 	IMPORTANT: Make sure we KEEP the ID's that I added to Ion-view and Ion-content -->
-	<ion-content scroll="false" id="addonWrapper" class="canvasAndAddonContainer">
+<ion-view view-title="Edit Image" id="container">
+	<ion-content scroll="true" id="addonWrapper" class="canvasAndAddonContainer">
+
+<!-- PLACEHOLDER BUBBLE -->
+	  <!-- 	<textarea rows="4" cols="50" id='new' style="border:solid black 3px;max-width:120px"></textarea>
+		<h1 ng-click="previewImage()" id="one">PREVIEW IMG</h1> -->
+<!-- END OF PLACEHOLDER FOR BUBBLE -->
+ 
+		<button class="button" ng-click="addStickersToCanvas
+		()">Add stickers to canvas</button>
+ 	<canvas id='imageCanvas' width='375' height='375' data-caman-hidpi-disabled="true"></canvas>
+ <img ng-src='{{test}}'>
 
 		<p id="addonError" style="display: none;">Too Many Stickers!</p>
 		<p id="addonSuccessfulDelete" style="display: none;">Successfully Deleted</p>
 		<div id="puff"></div>
 		
-		<canvas id='myCanvas' width='375' height='375'></canvas>
 
 		<img 
 		ng-src={{sticker.source}} 
@@ -21,6 +28,7 @@
 		class="addonDivs"
 		addtype="sticker" 
 		style="
+			z-index: 10;
 			position:absolute; 
 			top:0px; 
 			left:0px">
@@ -45,50 +53,18 @@
 	    hm-panend="onHammerEnd"
 	    ng-repeat="bubble in bubblesArray" ></textarea>
 
-<!-- 	    <img
-	    src='assets/icons/delete_.png'
-	    id="deleteDiv"
-	    style="display: none;"
-	    >
-	    </img> -->
-
-	</ion-content>
-	</ion-footer-bar id="footerbar">
-  		<div 
-  		id="navbarAddonWrapper"
-  		ng-if="currentNav === 'navbarAddon'">
-
-			<navbar-addon 
-			id="navbarAddon"
-=======
-<ion-view view-title="Edit Image">
-	<ion-content scroll="false">
-	
-		<canvas id='imageCanvas' width='375' height='375' data-caman-hidpi-disabled="true"></canvas>
-
-
-		<img ng-src={{sticker.source}} id="sticker{{sticker.id}}" ng-repeat="sticker in stickersArray" hm-panmove='onHammer' ng-click="test()" style="position:absolute; top:'0px'; left:'0px'">{{ sticker }}</img>
-<!-- 	    <button class="button" ng-click="takePicture()">Take Picture</button>
-	    <button class="button" ng-click="openPhotoLibrary()">Select Photo From Library</button> -->
-	    
-	    <canvas id='greyImage'width='125' height='125' data-caman-hidpi-disabled="true" ng-click="applyFilter('grey', 'imageCanvas')"></canvas>
-	    <canvas id='posterImage' width='125' height='125' data-caman-hidpi-disabled="true" ng-click="applyFilter('poster', 'imageCanvas')"></canvas>
-	    <canvas id='brownImage' width='125' height='125' data-caman-hidpi-disabled="true" ng-click="applyFilter('brown', 'imageCanvas')"></canvas>
-	    <canvas id='blackImage' width='125' height='125' data-caman-hidpi-disabled="true" ng-click="applyFilter('black', 'imageCanvas')"></canvas>
-
-	  
+		
 		<button class="button" ng-click="saveImage()">Save Image</button>
 
-
 	</ion-content>
-	</ion-footer-bar>
-    	<div>{{filters}}</div>
-  		<div>
+  	<div 
+  		id="navbarAddonWrapper"
+  		ng-if="currentNav === 'navbarAddon'">
 			<navbar-addon 
-			id="navbarAddon" 
->>>>>>> master
+			id="navbarAddon"
 			test="testFunc()" 
-			addons="allAddons"
+			addons="allAddons",
+			url="url",
 			takepicture="takePicture()"
 			openphotolibrary="openPhotoLibrary()"
 			onhammer="onHammer()"
@@ -96,21 +72,18 @@
 			bubble="bubble"
 			border="border"
 			filter="filter"
+			filtersarr='filtersarr'
+			applyfilter='applyfilter'
 			></navbar-addon>
-<<<<<<< HEAD
+	</div>
 
-		</div>
+	<div
 
+	id='navbarDelete'
+	ng-if="currentNav === 'navbarDelete'"
+	>
 		<div
-	
-		id='navbarDelete'
-		ng-if="currentNav === 'navbarDelete'"
-		>
-			<div
-			id="navbarDeleteInner"
-			> DELETE </div>
-=======
->>>>>>> master
-		</div>
-	</ion-footer-bar>
+		id="navbarDeleteInner"
+		> DELETE </div>
+	</div>
 </ion-view>
