--- a/platforms/ios/www/js/navbar/navbar.addons/navbar.addons.template.html
+++ b/platforms/ios/www/js/navbar/navbar.addons/navbar.addons.template.html
@@ -5,11 +5,25 @@
 	    </button>
 	</ion-content>
 	<ion-scroll direction="x" id="addonsBottom">
-		<div id="squareAndAddonFrames">
+		<div id="squareAndAddonFrames" ng-show="addonType!=='filter'">
 		    <button id="transparent" class="button" ng-repeat="addon in addons | filter: {type: addonType}" ng-click="addon.addonFunction()">
 				<div>
 		    		<img src="{{ addon.thumbnail }}">
 		    	</div>
+		    </button>
+		</div>
+		<div id="squareAndAddonFrames" ng-show="addonType==='filter'">
+		    <button  id="transparent" class="button" ng-click="applyfilter('grey','imageCanvas')">
+				<canvas id='grey' width='125' height='125' data-caman-hidpi-disabled="true"></canvas>
+		    </button>
+		    <button  id="transparent" class="button" ng-click="applyfilter('poster','imageCanvas')">
+				<canvas id='poster' width='125' height='125' data-caman-hidpi-disabled="true"></canvas>
+		    </button>
+		    <button  id="transparent" class="button" ng-click="applyfilter('brown','imageCanvas')">
+				<canvas id='brown' width='125' height='125' data-caman-hidpi-disabled="true"></canvas>
+		    </button>
+		    <button  id="transparent" class="button" ng-click="applyfilter('black','imageCanvas')">
+				<canvas id='black' width='125' height='125' data-caman-hidpi-disabled="true"></canvas>
 		    </button>
 		</div>
 	</ion-scroll>
