--- a/www/index.html
+++ b/www/index.html
@@ -65,7 +65,7 @@
     <script src="js/story/story.controller.js"></script>
     <script src="js/camera/camera.controller.js"></script>
     <script src="js/settings/settings.controller.js"></script>
-    <script src="js/top-navbar/top-navbar.controller.js"></script>
+    <script src="js/navbar/navbar.main/navbar.main.controller.js"></script>
 
     <!-- Filters -->
     <script src="js/filters/filters.js"></script>
@@ -79,21 +79,21 @@
   <!-- Top navbar that changes based on states -->
     <ion-nav-bar class="bar-stable" ng-controller="Topnavbar">
         <div ng-show="checkState()">
-      <ion-nav-back-button></ion-nav-back-button>
+            <ion-nav-back-button></ion-nav-back-button>
         </div>
-      <ion-nav-buttons side="left">
+    <ion-nav-buttons side="left">
         <button ng-hide="'home' | isState" ui-sref="home" class="button icon-left ion-home"></button>
       <!--   <button ng-if=" 'home' | isState" menu-toggle="left" class="button button-icon icon ion-navicon"></button> -->
         <!-- <button ng-if=" 'camera' | isState" class="button button-icon ion-grid"></button> -->
-      </ion-nav-buttons>
-      <ion-nav-buttons side="right">
+    </ion-nav-buttons>
+    <ion-nav-buttons side="right">
         <!-- <button class="button button-icon ion-ios-email"></button> -->
         <button ng-if=" 'home' | isState" class="button button-icon ion-person-add"></button>
         <button ui-sref="settings" ng-if=" 'home' | isState" class="button button-icon ion-gear-a"></button>
-      </ion-nav-buttons>
-
+    </ion-nav-buttons>
 
     <ion-nav-view>
     </ion-nav-view>
+    
   </body>
 </html>
