add friends after story created functioning

--- a/www/js/home/home.myStories.template.html
+++ b/www/js/home/home.myStories.template.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Home">
+<!-- <ion-view view-title="Home">
   <ion-content>
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" ui-sref="storyCreate" style="background-color:green;" type="item-text-wrap" >
@@ -19,4 +19,4 @@
       </ion-item>
     </ion-list>
   </ion-content>
-</ion-view>
+</ion-view> -->
