--- a/www/js/camera/camera.template.html
+++ b/www/js/camera/camera.template.html
@@ -2,9 +2,9 @@
 	<ion-content scroll="false" id="addonWrapper" class="canvasAndAddonContainer">
 
 <!-- PLACEHOLDER BUBBLE -->
-	  	<textarea rows="4" cols="50" id='new' style="border:solid black 3px;max-width:120px"></textarea>
+<!-- 	  	<textarea rows="4" cols="50" id='new' style="border:solid black 3px;max-width:120px"></textarea>
 		<h1 ng-click="previewImage()" id="one">PREVIEW IMG</h1>
-<!-- END OF PLACEHOLDER FOR BUBBLE -->
+ --><!-- END OF PLACEHOLDER FOR BUBBLE -->
  
  <canvas id='imageCanvas' width='375' height='375' data-caman-hidpi-disabled="true"></canvas>
 		<button class="button" ng-click="addStickersToCanvas
